--- a/Neighborly/appsettings.json
+++ b/Neighborly/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*"
   ,
-"ConnectionStrings": {
-  "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=NeighborlyDb;Trusted_Connection=True;TrustServerCertificate=True;"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=NeighborlyDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    }
 }
