--- a/Neighborly/appsettings.Development.json
+++ b/Neighborly/appsettings.Development.json
@@ -8,4 +8,8 @@
 "ConnectionStrings": {
   "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=NeighborlyDb;Trusted_Connection=True;TrustServerCertificate=True;"
   }
+  ,
+ "GoogleMaps": {
+   "ApiKey": ""
+ }
 }
