--- a/Neighborly/appsettings.json
+++ b/Neighborly/appsettings.json
@@ -10,4 +10,8 @@
     "ConnectionStrings": {
         "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=NeighborlyDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
     }
+  ,
+ "GoogleMaps": {
+   "ApiKey": ""
+ }
 }
